fixed a bug with writing messages with spaces to database; added a fadein visual effect to new comments